crates/ruff_python_parser/tests/snapshots/invalid_syntax@class_def_empty_body.py.snap
---
source: crates/ruff_python_parser/tests/fixtures.rs
input_file: crates/ruff_python_parser/resources/inline/err/class_def_empty_body.py
---
## AST

```
Module(
    ModModule {
        node_index: NodeIndex(None),
        range: 0..31,
        body: Suite {
            range: 0..31,
            node_index: NodeIndex(None),
            statements: [
                ClassDef(
                    StmtClassDef {
                        node_index: NodeIndex(None),
                        range: 0..10,
                        decorator_list: [],
                        name: Identifier {
                            id: Name("Foo"),
                            range: 6..9,
                            node_index: NodeIndex(None),
                        },
                        type_params: None,
                        arguments: None,
                        body: Suite {
                            range: 10..10,
                            node_index: NodeIndex(None),
                            statements: [],
                        },
                    },
                ),
                ClassDef(
                    StmtClassDef {
                        node_index: NodeIndex(None),
                        range: 11..23,
                        decorator_list: [],
                        name: Identifier {
                            id: Name("Foo"),
                            range: 17..20,
                            node_index: NodeIndex(None),
                        },
                        type_params: None,
                        arguments: Some(
                            Arguments {
                                range: 20..22,
                                node_index: NodeIndex(None),
                                args: [],
                                keywords: [],
                            },
                        ),
                        body: Suite {
                            range: 23..23,
                            node_index: NodeIndex(None),
                            statements: [],
                        },
                    },
                ),
                Assign(
                    StmtAssign {
                        node_index: NodeIndex(None),
                        range: 24..30,
                        targets: [
                            Name(
                                ExprName {
                                    node_index: NodeIndex(None),
                                    range: 24..25,
                                    id: Name("x"),
                                    ctx: Store,
                                },
                            ),
                        ],
                        value: NumberLiteral(
                            ExprNumberLiteral {
                                node_index: NodeIndex(None),
                                range: 28..30,
                                value: Int(
                                    42,
                                ),
                            },
                        ),
                    },
                ),
            ],
        },
    },
)
```
## Errors

  |
1 | class Foo:
2 | class Foo():
  | ^^^^^ Syntax Error: Expected an indented block after `class` definition
3 | x = 42
  |


  |
1 | class Foo:
2 | class Foo():
3 | x = 42
  | ^ Syntax Error: Expected an indented block after `class` definition
  |
